<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:weightSum="1"
    android:background="@drawable/selector_card"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/stock_standard_layout">
    
	    <!-- Name and tick -->
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	    
		    <TextView
		        android:layout_height="30dp"
		        android:layout_width="wrap_content"
		        android:id="@+id/stock_tick"
		        android:textColor="@color/color_stock_tick"
		        android:textSize="24sp"
		        android:paddingRight="10dp" />
		    
		    <TextView
		        android:layout_height="30dp"
		        android:layout_width="wrap_content"
		        android:id="@+id/stock_name"
		        android:textSize="18sp"
		        android:textColor="@color/color_stock_name" />
		    
		    <RelativeLayout
		        android:layout_height="30dp"
		        android:layout_width="fill_parent" >
		        
				<ImageButton 
			        android:id="@+id/stock_show_graph_button"
			        android:layout_height="fill_parent"
			        android:layout_width="wrap_content"
			        android:src="@drawable/ic_action_core_overflow"
			        android:background="@android:color/transparent"
			        android:layout_alignParentRight="true" />
	
		    </RelativeLayout>
	
	    </LinearLayout>
	    
		<!-- Update date -->
		<TextView 
		    android:id="@+id/stock_date"
		    android:layout_height="18dp"
		    android:layout_width="wrap_content"
		    android:textSize="14sp"
		    android:textColor="@color/color_stock_date" />
		
		<!-- Stock values info -->
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0"
		    android:paddingTop="20dp" >
		    
		    <TextView 
		        android:id="@+id/stock_stock_value"
		        android:layout_width="0dp"
		        android:layout_height="30dp"
		        android:textSize="22sp"
		        android:layout_weight="0.5"
		        android:textColor="@color/color_stock_stock_value"
		        android:gravity="center_vertical|left"/>
		    
		    <TextView 
		        android:id="@+id/stock_change"
		        android:layout_width="0dp"
		        android:layout_height="30dp"
		        android:layout_weight="0.25"
		        android:textSize="16sp"
		        android:gravity="center_vertical|right" />
		    
		    <TextView 
		        android:id="@+id/stock_change_percentage"
		        android:layout_width="0dp"
		        android:layout_height="30dp"
		        android:layout_weight="0.25"
		        android:textSize="16sp"
		        android:gravity="center_vertical|right" />
		    
		</LinearLayout>
		
		<!-- Client stock info -->
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0"
		    android:paddingTop="15dp" >
		    
		    <TextView 
		        android:id="@+id/stock_total_value"
		        android:layout_width="0dp"
		        android:layout_height="40dp"
		        android:textSize="18sp"
		        android:layout_weight="0.6"
		        android:textColor="@color/color_stock_total_value"
		        android:gravity="center_vertical|left"/>
		    
		    <TextView 
		        android:id="@+id/stock_n_stocks"
		        android:layout_width="0dp"
		        android:layout_height="40dp"
		        android:layout_weight="0.4"
		        android:textSize="24sp"
		        android:textColor="@color/color_stock_n_stocks"
		        android:gravity="center_vertical|right" />
		    
		</LinearLayout>
	
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/stock_graph_layout"
        android:visibility="gone" >
		
        <!-- Name and tick -->
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	    
		    <TextView
		        android:layout_height="30dp"
		        android:layout_width="wrap_content"
		        android:id="@+id/stock_tick_graph"
		        android:textColor="@color/color_stock_tick"
		        android:textSize="24sp"
		        android:paddingRight="10dp" />
		    
		    <TextView
		        android:layout_height="30dp"
		        android:layout_width="wrap_content"
		        android:id="@+id/stock_name_graph"
		        android:textSize="18sp"
		        android:textColor="@color/color_stock_name" />
		    
		    <RelativeLayout
		        android:layout_height="30dp"
		        android:layout_width="fill_parent" >
		        
				<ImageButton 
			        android:id="@+id/stock_show_standard_button"
			        android:layout_height="fill_parent"
			        android:layout_width="wrap_content"
			        android:src="@drawable/ic_action_core_overflow"
			        android:background="@android:color/transparent"
			        android:layout_alignParentRight="true" />
	
		    </RelativeLayout>
	
	    </LinearLayout>
	    
	    <!-- Update date -->
		<TextView 
		    android:id="@+id/stock_date_graph"
		    android:layout_height="18dp"
		    android:layout_width="wrap_content"
		    android:textSize="14sp"
		    android:textColor="@color/color_stock_date" />
		
		<SeekBar
	        android:id="@+id/stock_multiplier_seek"
	        android:layout_marginTop="20dp"
	        android:layout_marginBottom="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:progress="0"
	        android:max="3" />
		
		<LinearLayout
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="1.0"
	        android:layout_marginRight="10dp"
	        android:layout_marginLeft="10dp" >
		    
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_weight="0.1"
		        android:layout_width="0dp"
		        android:gravity="center"
		        android:textSize="12sp"
		        android:text="@string/stock_times_1"/>
		    
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_weight="0.50"
		        android:layout_width="0dp"
		        android:gravity="center"
		        android:textSize="12sp"
		        android:text="@string/stock_times_10"/>
		    
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_weight="0.10"
		        android:layout_width="0dp"
		        android:gravity="center"
		        android:textSize="12sp"
		        android:text="@string/stock_times_100"/>
		    
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_weight="0.30"
		        android:layout_width="0dp"
		        android:gravity="right"
		        android:textSize="12sp"
		        android:text="@string/stock_times_1000"/>
		    
		</LinearLayout>
		
		<SeekBar
	        android:id="@+id/stock_n_stocks_seek"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:progress="0"
	        android:max="99" />
		
		<LinearLayout
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="1.0"
	        android:layout_marginRight="10dp"
	        android:layout_marginLeft="10dp" >
		    
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:layout_width="0dp"
		        android:gravity="left"
		        android:textSize="12sp"
		        android:id="@+id/stock_n_stocks_seek_min"
		        android:text="@string/stock_n_stocks_default_min"/>
		    
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:layout_width="0dp"
		        android:gravity="right"
		        android:textSize="12sp"
		        android:id="@+id/stock_n_stocks_seek_max"
		        android:text="@string/stock_n_stocks_default_max"/>
		    
		</LinearLayout>
		
		<TextView 
	        android:id="@+id/stock_n_stocks_graph"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:textSize="24sp"
	        android:textColor="@color/color_stock_n_stocks"
	        android:gravity="center_vertical|right" />
        
    </LinearLayout>
    
</LinearLayout>
